appId: com.borrowhood.app
name: "Send a Message"
tags:
  - needs-fixtures
---
- launchApp
- tapOn:
    id: "TabBar.Activity"
- tapOn: "Messages"
- tapOn:
    index: 0
- tapOn:
    id: "Chat.input.message"
- inputText: "Hey, is your drill still available?"
- tapOn:
    id: "Chat.button.send"
- assertVisible: "Hey, is your drill still available?"
